--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -27,7 +27,7 @@
 				<td th:text="${book.price}"></td>
 				<td>
 					<a th:href="@{/books/edit/{id}(id=${book.id})}">Edit</a>
-					<a th:href="@{/books/delete/{id}(id=${bood.id})}"
+					<a th:href="@{/books/delete/{id}(id=${book.id})}"
 						onclick="return confirm('Are you sure?')">Delete</a>
 				</td>
 			</tr>
