--- a/src/main/resources/templates/edit_book.html
+++ b/src/main/resources/templates/edit_book.html
@@ -23,7 +23,7 @@
 		</div>
 		<div>
 			<label for="price">Price</label>
-			<input type="number" step="0.01" id="price" name="price" th:field="*{price'}" required>
+			<input type="number" step="0.01" id="price" name="price" th:field="*{price}" required>
 		</div>
 		<div>
 			<button type="submit">Update</button>
